--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
     </ol>
     <p>Bug Fixes:</p>
     <ol>
+      <li>Report a parser error when a TypedFunctionTest does not have a return type clause.</li>
     </ol>
     <p>IntelliJ Integration:</p>
     <ol>
