--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -8,6 +8,9 @@ inspection.XPST0003.predefined-entity.description=This inspection checks for inv
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
 inspection.XPST0003.unsupported-construct.description=This inspection reports warnings for XQuery constructs that are not supported by the specified XQuery dialect. These constructs would raise XPST0003 errors on that XQuery processor.
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
+inspection.XPST0081.unbound-qname-prefix.description=This inspection checks for QName prefices that do not resolve to namespace declarations in the static context.
+inspection.XPST0081.unbound-qname-prefix.display-name=Unbound namespace prefix
+inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
 parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.comparison-no-lhs-or-direlem=XPST0003: Comparison without left-hand expression, or incomplete direct element constructor.
