--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -11,6 +11,9 @@ inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery constr
 inspection.XPST0081.unbound-qname-prefix.description=This inspection checks for QName prefices that do not resolve to namespace declarations in the static context.
 inspection.XPST0081.unbound-qname-prefix.display-name=Unbound namespace prefix
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
+inspection.XQST0031.unsupported-version.description=This inspection checks for XQuery version declarations that specify a version not supported by the selected implementation.
+inspection.XQST0031.unsupported-version.display-name=Unsupported XQuery version
+inspection.XQST0031.unsupported-version.message=XQST0031: The implementation does not support this XQuery version.
 parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.comparison-no-lhs-or-direlem=XPST0003: Comparison without left-hand expression, or incomplete direct element constructor.
