Add an XPST0017 static error inspection -- function name and arity checks.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -68,6 +68,12 @@
                      groupName="XQuery" enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xquery.inspections.XPST0003.PredefinedEntityRefInspection"/>
 
+    <!-- XQST0017 -->
+    <localInspection language="XQuery" shortName="UndefinedFunction" bundle="messages.XQueryBundle"
+                     key="inspection.XPST0017.undefined-function.display-name" hasStaticDescription="true"
+                     groupName="XQuery" enabledByDefault="false" level="ERROR"
+                     implementationClass="uk.co.reecedunn.intellij.plugin.xquery.inspections.XPST0017.UndefinedFunctionInspection"/>
+
     <!-- XQST0031 -->
     <localInspection language="XQuery" shortName="UnsupportedXQueryVersion" bundle="messages.XQueryBundle"
                      key="inspection.XQST0031.unsupported-version.display-name" hasStaticDescription="true"
