--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -5,6 +5,9 @@ browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
+inspection.XPST0017.undefined-function.display-name=Undefined function
+inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate the function name.
+inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
 inspection.XPST0081.unbound-qname-prefix.display-name=Unbound namespace prefix
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
 inspection.XQST0031.unsupported-version.display-name=Unsupported XQuery version
