--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.4-eap-69'
     repositories {
         maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
         mavenCentral()
     }
     dependencies {
@@ -54,6 +55,7 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
     mavenCentral()
 }
 
