--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,8 @@ src/test/resources/tests/parser/basex-8.5/*.txt text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.xq text eol=lf
 src/test/resources/tests/parser/marklogic-6.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-6.0/*.xq text eol=lf
+src/test/resources/tests/parser/marklogic-7.0/*.txt text eol=lf
+src/test/resources/tests/parser/marklogic-7.0/*.xq text eol=lf
 src/test/resources/tests/parser/marklogic-8.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-8.0/*.xq text eol=lf
 src/test/resources/tests/parser/saxon-9.4/*.txt text eol=lf
