UnsupportedConstructedInspection2: Check that the specification the element requires is implemented by the product version.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -5,6 +5,7 @@ browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
+inspection.XPST0003.unsupported-construct.message=XPST0003: {0} does not support {1} constructs.
 inspection.XPST0017.undefined-function.display-name=Undefined function
 inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate the function name.
 inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
