Fix running the JUnit tests from IntelliJ versions not using JUnit 5.0.0-M5.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.junit_milestone = '-M5' // IntelliJ 2017.2.1
     ext.kotlin_version = '1.1.4-2'
     repositories {
         maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
@@ -32,8 +33,12 @@ allprojects {
 }
 
 dependencies {
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0$junit_milestone"
+    // See: http://junit.org/junit5/docs/snapshot/user-guide/#running-tests-ide-intellij-idea
+    testRuntime("org.junit.platform:junit-platform-launcher:1.0.0$junit_milestone")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0$junit_milestone")
+    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0$junit_milestone")
 }
 
 intellij {
