--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,6 +4,8 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
+inspection.XPST0003.reserved-function-name.display-name=Reserved function name
+inspection.XPST0003.reserved-function-name.message=XPST0003: Reserved {0} keyword used as a function name.
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
 inspection.XPST0003.unsupported-construct.message=XPST0003: {0} does not support {1} constructs.
 inspection.XPST0017.undefined-function.display-name=Undefined function
