Support FinalStatementSemicolon inspections for Scripting Extension.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,7 +4,7 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
-inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' here.
+inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
 inspection.XPST0003.final-statement-semicolon.none=XPST0003: {0} does not allow '';'' here.
 inspection.XPST0003.map-constructor-entry.display-name=Saxon map constructor entry syntax
 inspection.XPST0003.map-constructor-entry.message=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
