--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -5,7 +5,7 @@ browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
 inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
-inspection.XPST0003.final-statement-semicolon.none=XPST0003: {0} does not allow '';'' here.
+inspection.XPST0003.final-statement-semicolon.none=XPST0003: {0} does not allow '';'' at the end of the last statement.
 inspection.XPST0003.map-constructor-entry.display-name=Saxon map constructor entry syntax
 inspection.XPST0003.map-constructor-entry.message=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
