--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
     <ol>
       <li>MarkLogic 7.0 and 8.0 schema-components KindType tests.</li>
       <li>Recover when <code>=</code> is used instead of <code>:=</code>.</li>
+      <li>Improved multi-statement expression parsing and error reporting for MarkLogic 6.0, and W3C Scripting XQuery extensions.</li>
     </ol>
     <p>Bug Fixes:</p>
     <ol>
@@ -27,8 +28,9 @@
     </ol>
     <p>Inspections:</p>
     <ol>
-      <li>XPST0003: Saxon/XQuery map key-value separators. This is split out from the unsupported construct inspection.</li>
+      <li>XPST0003: Final statement semicolon inspection for MarkLogic and Scripting Extension syntax differences.</li>
       <li>XPST0003: Reserved function inspection. This is split out from the unsupported construct inspection.</li>
+      <li>XPST0003: Saxon/XQuery map key-value separators. This is split out from the unsupported construct inspection.</li>
       <li>XPST0017: Undefined function inspection. This is experimental, as it currently reports many false positives.</li>
       <li>XPST0081: Unbound QName prefix.</li>
     </ol>
