--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
       <li>XPST0003: Reserved function inspection. This is split out from the unsupported construct inspection.</li>
       <li>XPST0003: Saxon/XQuery map key-value separators. This is split out from the unsupported construct inspection.</li>
       <li>XPST0017: Undefined function inspection. This is experimental, as it currently reports many false positives.</li>
+      <li>XQST0033: Duplicate namespace prefix.</li>
       <li>XPST0081: Unbound QName prefix.</li>
     </ol>
     <p>IntelliJ Integration:</p>
