--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -18,6 +18,7 @@ inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate 
 inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
 inspection.XPST0081.unbound-qname-prefix.display-name=Unbound namespace prefix
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
+inspection.XQST0031.unsupported-version.different-version-for-transaction=XQST0031: MarkLogic requires that XQuery versions are the same across different transactions.
 inspection.XQST0031.unsupported-version.display-name=Unsupported XQuery version
 inspection.XQST0031.unsupported-version.message=XQST0031: The implementation does not support this XQuery version.
 inspection.XQST0033.duplicate-namespace-prefix.display-name=Duplicate namespace prefix
